Added Latest Stuff

--- a/index.html
+++ b/index.html
@@ -99,13 +99,52 @@
             <h2 id="publications">Publications</h2>
             <div class="row">
                 <div class="col-sm-3">
-                    <img class="img-responsive img-center" src="static/images/super_resolution/18-SEM_cv2.jpg" alt="Paper" style="width:100px; height:auto; margin: auto;">
+                    <img class="img-responsive img-center" src="static/images/super_resolution/18-SEM_cv2.jpg" alt="Paper" style="width:500px; height:auto; margin: auto;">
                     <br>
-                    <p class="text-center">August 2019 - Present</p>
+                    <p class="text-center">August 2019 - May 2020</p>
                 </div>
                 <div class="col-sm-9">
                     <h3>Multi-Modal Super Resolution for Dense Microscopic Particle Size Estimation</h3>
-                    <h5>Coming Soon</h5>
+                    <h4>Submitted to TPAMI, under review. Arxiv link: <a>https://arxiv.org/abs/2010.09594</a></h4>
+                    <h5>Particle Size Analysis (PSA) is an important process carried out in a number of 
+                        industries, which can significantly influence the properties of the final product. 
+                        A ubiquitous instrument for this purpose is the Optical Microscope (OM). However, OMs 
+                        are often prone to drawbacks like low resolution, small focal depth, and edge features 
+                        being masked due to diffraction. We propose a powerful application of a combination of 
+                        two Conditional Generative Adversarial Networks (cGANs) that Super Resolve OM images 
+                        to look like Scanning Electron Microscope (SEM) images. We further demonstrate the use 
+                        of a custom object detection module that can perform efficient PSA of the super-resolved
+                         particles on both, densely and sparsely packed images. The PSA results obtained from 
+                         the super-resolved images have been benchmarked against human annotators, and results 
+                         obtained from the corresponding SEM images. The proposed models show a generalizable 
+                         way of multi-modal image translation and super-resolution for accurate particle size 
+                         estimation.</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <img class="img-responsive img-center" src="static/images/quaddy/quaddy.png" alt="Paper" style="width:500px; height:auto; margin: auto;">
+                    <br>
+                    <p class="text-center">January 2018 - April 2018</p>
+                </div>
+                <div class="col-sm-9">
+                    <h3>Use of UAVs for mining applications</h3>
+                    <h4>International Journal of Advance Research, Ideas and Innovations in Technology (IJARIIT)<br><a>https://www.ijariit.com/manuscripts/v4i2/V4I2-2159.pdf</a></h4>
+                    <h5>Unmanned Aerial Vehicles (UAVs) have been gaining a lot of impetus in the recent times. Drones are constantly being made
+                        available for a myriad of day-to-day applications like food delivery, surveillance, farming, etc. One of the most overshadowed
+                        regions in the list of applications remains to mine. Mining is a dangerous activity and more often than not, there are certain
+                        unknown hazards to it that are too dangerous for humans to be experimenting with all by themselves. Hence it makes sense to
+                        use a UAV in the form of a First-Person View (FPV) drone.<br><br>
+                        For the development of a UAV, there are thousands of different permutations that can be used. After a detailed analysis of
+                        various of them ranging from a simple tri-copter to an octocopter, a quadcopter design was unanimously selected as it provides
+                        elegant support in the form of control, structure, reliability, cost, size, etc. Most important of them being size and structure.
+                        Mines can be constricting places and a wide frame may become very difficult to control inside such enclosures.<br><br>
+                        This project has been implemented on a much smaller scale than an actual prototype, primarily because of an ambitious
+                        development schedule coupled with a very limited budget. These constraints have forced a compromise on the quality of the
+                        components used but have not tampered with the real application objectives that the drone has to suffice. The drone at present
+                        is being controlled by a remote-control transmitter, receiver couple but we are working on creating our own GUI which will
+                        provide a direct control over all the systems from a remote laptop or android device.
+                        </h5>
                 </div>
             </div>
             <br>
@@ -129,6 +168,35 @@
             <hr>
             <h2 id="projects">Projects</h2>
             <div class="row">
+                <div class="col-sm-4">
+                    <img class="img-responsive img-center" src="static/images/VoiceApp/callscreen.jpeg" alt="callscreen" style="width:300px; height:auto; margin: 0 auto;">
+                </div>
+                <div class="col-sm-4">
+                    <img class="img-responsive img-center" src="static/images/VoiceApp/chatscreen.jpeg" alt="chatscreen" style="width:300px; height:auto; margin: 0 auto;">
+                </div>
+                <div class="col-sm-4">
+                    <img class="img-responsive img-center" src="static/images/VoiceApp/mapscreen.jpeg" alt="mapscreen" style="width:300px; height:auto; margin: 0 auto;">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3>Immersive Audio-Only App</h3>
+                    <p>
+                        Developed a cross-platform app using React-Native. The app is an audio-only experimenting
+                        with audio calling, recording of live as well as asynchronous conversations, and an audio
+                        based map for proximity calls and live location sharing. The app extensively relies on high performance
+                        socket connections for real-time updates as well as audio calls. 
+                    </p>
+                    <h4>Tech Stack</h4> 
+                    <ul>
+                        <li>Backend server: NodeJS</li>
+                        <li>Server Load Balancing + Reverse Proxy: Nginx</li>
+                        <li>Databases: Firebase + MongoDB + Redis</li>
+                        <li>App Development: React Native (Android + iOS)</li>
+                    </ul> 
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-sm-3">
                     <img class="img-responsive img-center" src="static/images/beer_can/00040087_0_q641.png" alt="VESIT" style="width:500px; height:auto; margin: 0 auto;">
                 </div>
@@ -139,7 +207,7 @@
                         ignoring the others. Dataset had challenges like reflection of light from the ambient background
                         on the glass-doors, due to which, a StyleGAN2 model was trained on web-scraped images with data
                         manipulation. This made the GAN generate images that replicate the real world scenarios coarsely.
-                        This made our classification model using ResNet101 architecture more robust. <span><a style="cursor: pointer;">Read More.</a></span>
+                        This made our classification model using ResNet101 architecture more robust.
                     </p>
                 </div>
             </div>
@@ -157,7 +225,7 @@
                         Further, a custom object detection model was created for the super resolved images: Super
                         Resolution Particle Sizing Algorithm. The detection model gives output feature maps as 4D 
                         vectors, each pixel giving a map of <i>(p, x, y, r)</i> to detect the circle of a particle and its radius.
-                        We wrote a paper on this project which is currently awaiting approval by the legal teams.<span><a style="cursor: pointer;">Read More.</a></span>
+                        We wrote a paper on this project which is currently awaiting approval by the legal teams.
                     </p>
                 </div>
             </div>
@@ -171,7 +239,7 @@
                     <p>
                         Trained a YOLOv5 model for the wheat detection challenge on Kaggle. Unfortunately due to 
                         the license of YOLOv5 not being eligible for the competition, results could be judged. 
-                        However, on comparison with manual annotation by myself, I got a mAP@0.9 value of 0.887.<span><a style="cursor: pointer;">Read More.</a></span>
+                        However, on comparison with manual annotation by myself, I got a mAP@0.9 value of 0.887.
                     </p>
                 </div>
             </div>
@@ -188,7 +256,7 @@
                         feature engineering, model training, and model ensembling to give the most generalizable
                         model for a particular dataset. The backend was created in Python using Django. Frontend 
                         was created using Angular 8 with graphs and plots using HighCharts. The web-app was
-                        served using Nginx as a reverse proxy on a docker container.<span><a style="cursor: pointer;">Read More.</a></span>
+                        served using Nginx as a reverse proxy on a docker container.
                     </p>
                 </div>
             </div>
